--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "pillow",
-    "pystray>=0.19.5",
+    "pystray,
     "qrcode",
+    "legacy-cgi; python_version >= '3.13'",
 ]
