--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,7 @@ jobs:
           tar -C dist -czf "out/mizban-${VERSION}-windows-amd64.tar.gz" "windows-amd64"
           tar -C dist -czf "out/mizban-${VERSION}-windows-arm64.tar.gz" "windows-arm64"
 
-          # Raw binaries (advanced use; require --web-dir or colocated web assets).
+          # Raw binaries (embedded web fallback is available; --web-dir still supported).
           cp dist/linux-amd64/mizban "out/mizban-${VERSION}-linux-amd64"
           cp dist/linux-arm64/mizban "out/mizban-${VERSION}-linux-arm64"
 
@@ -157,6 +157,64 @@ jobs:
           path: out/*
           if-no-files-found: error
 
+  build_windows_msi:
+    name: Build Windows MSI Assets
+    runs-on: windows-latest
+    needs: prepare
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: go.mod
+
+      - name: Setup WiX v4 CLI
+        shell: pwsh
+        run: |
+          dotnet tool update --global wix --version 4.* 2>$null
+          if ($LASTEXITCODE -ne 0) {
+            dotnet tool install --global wix --version 4.*
+          }
+          "$env:USERPROFILE\.dotnet\tools" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+      - name: Build Windows binaries for MSI payloads
+        shell: bash
+        run: |
+          set -euo pipefail
+          VERSION="${{ needs.prepare.outputs.version }}"
+          for arch in amd64 arm64; do
+            out_dir="dist/windows-${arch}"
+            mkdir -p "${out_dir}"
+            GOOS="windows" GOARCH="${arch}" CGO_ENABLED=0 go build -trimpath -buildvcs=false -ldflags "-s -w -X main.version=${VERSION}" -o "${out_dir}/mizban.exe" ./cmd/mizban
+            rm -rf "${out_dir}/web"
+            cp -R web "${out_dir}/web"
+          done
+
+      - name: Build MSI packages
+        shell: bash
+        run: |
+          set -euo pipefail
+          VERSION="${{ needs.prepare.outputs.version }}"
+          for arch in amd64 arm64; do
+            ./packaging/windows/build_msi.sh "${VERSION}" "${arch}"
+          done
+
+      - name: Collect MSI assets
+        shell: bash
+        run: |
+          set -euo pipefail
+          mkdir -p out
+          cp dist/packages/*.msi out/
+
+      - name: Upload Windows MSI assets
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-msi-assets
+          path: out/*
+          if-no-files-found: error
+
   bundle_assets:
     name: Bundle Release Assets
     runs-on: ubuntu-latest
@@ -164,6 +222,7 @@ jobs:
       - prepare
       - build_linux_windows
       - build_macos
+      - build_windows_msi
     outputs:
       artifact_name: ${{ steps.bundle.outputs.artifact_name }}
     steps:
@@ -188,6 +247,7 @@ jobs:
               -name "mizban-${VERSION}-*.deb" -o \
               -name "mizban-${VERSION}-*.dmg" -o \
               -name "mizban-${VERSION}-*.pkg" -o \
+              -name "mizban-${VERSION}-*.msi" -o \
               -name "mizban-${VERSION}-*.exe" -o \
               -name "mizban-${VERSION}-linux-amd64" -o \
               -name "mizban-${VERSION}-linux-arm64" \
@@ -217,6 +277,9 @@ jobs:
       - prepare
       - bundle_assets
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Download release bundle
         uses: actions/download-artifact@v4
         with:
@@ -228,5 +291,6 @@ jobs:
         with:
           tag_name: ${{ needs.prepare.outputs.tag }}
           name: Mizban ${{ needs.prepare.outputs.tag }}
+          body_path: docs/release-notes/${{ needs.prepare.outputs.tag }}.md
           files: release-assets/*
-          generate_release_notes: true
+          generate_release_notes: false
